           extended partition.  Thanks to Joey Hess, closes: #235505.
        2. better defaults for the new partition: usage method (format),
           file system (ext3) and mount point (first unused from /, /home,
           /usr, /tmp, /usr/local).  The bootable flag is untouched
           though.  Thanks to Joey Hess and dan_at_watson.ibm.com,
	   closes: #235367, #239557.
        3. in the main menu of partman the item for the new partition is
           default 
        4. add progress bar while computing the new state (this happened
           to be quiet slow...)
    - active_partition/{delete,toggle_bootable}/do_option: add progress
      bar while computing the new state 
    
 -- Anton Zinoviev <zinoviev@debian.org>  Tue,  6 Apr 2004 00:34:21 +0300

partman-partitioning (16) unstable; urgency=low

  * Updated translations: 
    - Bosnian (bs.po) by Safir Šećerović
    - Czech (cs.po) by Miroslav Kuře
    - Hungarian (hu.po) by VERÓK István
    - Italian (it.po) by Stefano Canepa
    - Polish (pl.po) by Bartosz Fenski
    - Romanian (ro.po) by Eddy Petrisor
    - Swedish (sv.po) by Anders Lundgren
    - Turkish (tr.po) by Osman Yüksel
    - Ukrainian (uk.po) by Eugeniy Meshcheryakov

 -- Joey Hess <joeyh@debian.org>  Tue, 30 Mar 2004 16:05:25 -0500

partman-partitioning (15) unstable; urgency=low

  * Updated translations: 
    - Russian (ru.po) by Nikolai Prokoschenko

 -- Joey Hess <joeyh@debian.org>  Sun, 14 Mar 2004 13:18:03 -0500

partman-partitioning (14) unstable; urgency=low

  * Updated translations: 
    - Portuguese (pt.po) by Nuno Sénica
    - Russian (ru.po) by Nikolai Prokoschenko
    - Turkish (tr.po) by Osman Yüksel

 -- Anton Zinoviev <zinoviev@debian.org>  Sun, 14 Mar 2004 17:27:19 +0200

partman-partitioning (13) unstable; urgency=low

  * Updated translations: 
    - Albanian (sq.po) by Elian Myftiu
    - Simplified Chinese (zh_CN.po) by Carlos Z.F. Liu

 -- Joey Hess <joeyh@debian.org>  Sat, 13 Mar 2004 12:29:31 -0500
