@@ -5,21 +5,14 @@
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
 
-PACKAGE=$(shell dh_listpackages)
-VERSION=$(shell dpkg-parsechangelog | grep ^Version: | cut -d ' ' -f 2)
-ARCH=all
-FILENAME=$(PACKAGE)_$(VERSION)_$(ARCH).udeb
-PRIORITY=$(shell grep ^Priority: debian/control | cut -d ' ' -f 2)
+PACKAGE = partman-partitioning
 
-build: build-stamp
-build-stamp:
-	dh_testdir
-	touch build-stamp
+build: 
+# Ye olde no-op.
 
 clean:
 	dh_testdir
 	dh_testroot
-	rm -f build-stamp
 	rm -f `find . -name '*~'`
 	dh_clean
 
@@ -36,12 +29,11 @@ install: build
 binary-indep: build install
 	dh_testdir
 	dh_testroot
-	dh_installdebconf -n
+	dh_installdebconf
 	dh_fixperms
 	dh_installdeb
-	dh_gencontrol -- -fdebian/files~
-	dpkg-distaddfile $(FILENAME) debian-installer $(PRIORITY)
-	dh_builddeb --filename=$(FILENAME)
+	dh_gencontrol
+	dh_builddeb
 
 binary-arch: build install
 
