@@ -21,13 +21,15 @@ partman-partitioning (17) UNRELEASED; urgency=low
            file system (ext3) and mount point (first unused from /, /home,
            /usr, /tmp, /usr/local).  The bootable flag is untouched
            though.  Thanks to Joey Hess and dan_at_watson.ibm.com,
-	   closes: #235367, #239557.
+           closes: #235367, #239557.
         3. in the main menu of partman the item for the new partition is
            default 
         4. add progress bar while computing the new state (this happened
            to be quiet slow...)
     - active_partition/{delete,toggle_bootable}/do_option: add progress
       bar while computing the new state 
+  * Joshua Kwan
+    - Use new debhelper udeb support.
     
  -- Anton Zinoviev <zinoviev@debian.org>  Tue,  6 Apr 2004 00:34:21 +0300
 
